classDiagram
    class Owner {
        +str name
        +int available_minutes
        -list _pets
        +add_pet(pet)
        +get_pet() Pet
        +get_pets() list
        +get_all_tasks() list
    }

    class Pet {
        +str name
        +str species
        +int age
        +str breed
        -list _tasks
        +add_task(task)
        +remove_task(task)
        +get_tasks() list
    }

    class Task {
        +str name
        +str category
        +int duration_minutes
        +int priority
        +str preferred_time
        +bool completed
        +str recurrence
        +str due_date
        +int start_min
        +int end_min
        +update(**kwargs)
        +mark_complete()
        +next_occurrence() Task
    }

    class Scheduler {
        +Owner owner
        +sort_tasks_by_priority() list
        +sort_by_time() list
        +filter_by_status(completed) list
        +filter_by_pet(pet_name) list
        +detect_conflicts(tasks) list
        +generate_schedule() DailyPlan
        +mark_task_complete(task) Task
        +explain_plan(plan) str
        -_assign_times(tasks, default_start)
        -_hhmm_to_min(hhmm) int
    }

    class DailyPlan {
        +str date
        +list scheduled_tasks
        +list unscheduled_tasks
        +list warnings
        +str explanation
        +display() str
        +get_summary() str
    }

    Owner "1" --> "0..*" Pet : owns
    Pet "1" --> "0..*" Task : has
    Scheduler --> Owner : reads
    Scheduler ..> DailyPlan : produces
    DailyPlan "1" o-- "0..*" Task : scheduled_tasks
    DailyPlan "1" o-- "0..*" Task : unscheduled_tasks
    Task ..> Task : next_occurrence
